--- a/css/style.css
+++ b/css/style.css
@@ -27,10 +27,12 @@
   box-sizing: border-box;
 }
 
-html {
+html,
+body {
   font-family: 'Poppins', Lato, Tahoma, sans-serif;
   width: 100%;
   min-height: 100%;
+  overflow-x: hidden;
 }
 
 .header-wrapper {
